--- a/index.html
+++ b/index.html
@@ -47,11 +47,6 @@
 	<body>
 		<nav class="nav hide">
 	<div class="nav-items">
-		<img
-			src="dist/img/logo-restauracji.png"
-			alt="logo restauracji italiano"
-			class="logo-img"
-		/>
 		<a
 			href="index.html"
 			class="nav-item"
@@ -87,6 +82,9 @@
 						<p class="header-hiro-phar">Tradycyjne dania kuchni Włoskiej</p>
 						<p class="header-hiro-phar">Dania kuchni Polskiej</p>
 						<p class="header-hiro-phar">Dania wegańskie</p>
+						<p class="header-hiro-text">
+							<i class="fa-solid fa-angles-down"></i>
+						</p>
 					</div>
 				</h1>
 			</div>
@@ -217,7 +215,7 @@
 				</div>
 			</section>
 
-			<section class="party">
+			<section class="party wrapper">
 				<h2 class="section-title">Przyjęcia oraz imprezy okolicznościowe</h2>
 				<div class="party-info">
 					<p class="team-promo-text">
