--- a/contact.html
+++ b/contact.html
@@ -83,16 +83,13 @@
 						<p class="header-hiro-phar">Dania kuchni Polskiej</p>
 						<p class="header-hiro-phar">Dania wegańskie</p>
 						<p class="header-hiro-text"></p>
-							<i class="fa-solid fa-angles-down"></i>
-						</p>
 					</div>
 				</h1>
 			</div>
 		</header>
 
-		<section class="contact">
+		<div class="contact">
 			<h1 class="section-title">Kontakt</h1>
-
 			<div class="contact-box">
 				<div class="contact-info">
 					<p class="aboutus-phar">
@@ -162,7 +159,7 @@
 					</p>
 				</div>
 			</div>
-		</section>
+		</div>
 		<footer class="footer">
 	<div class="footer-box-mobile">
 		<a
