--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 						class="party-img"
 					/>
 				</div>
-				<button class="btn menu-btn">Sprawdź</button>
+				<a href="party.html"><button class="btn menu-btn">Sprawdź</button></a>
 			</section>
 
 			<section id="invite">
