--- a/party.html
+++ b/party.html
@@ -82,7 +82,7 @@
 						<p class="header-hiro-phar">Tradycyjne dania kuchni Włoskiej</p>
 						<p class="header-hiro-phar">Dania kuchni Polskiej</p>
 						<p class="header-hiro-phar">Dania wegańskie</p>
-						<p class="header-hiro-text"></p>
+						<p class="header-hiro-text">
 							<i class="fa-solid fa-angles-down"></i>
 						</p>
 					</div>
